# Tool

./: .gitignore  PROJECT_OVERVIEW.md  README.md  config.example.yaml  pyproject.toml  requirements.txt  使用说明.txt  快速开始.txt
examples/: browser_fallback.py  scrape_bilibili_dynamics.py  scrape_bilibili_video.py  scrape_zhihu_column.py  scrape_zhihu_question.py
examples/notebooks/: discussion_volume.ipynb
scraper/: __init__.py  __main__.py  analyze.py  cli.py  nlp.py  nlp_lexicon.py  report.py  viz.py
scraper/core/: base.py  browser.py  config.py  exceptions.py  progress.py  rate_limit.py  session.py  storage.py
tools/: regen_lexicon.py
